--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,6 +26,7 @@ phases:
       - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
       - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
+      - aws sts get-caller-identity
       - kubectl version
       - kubectl apply -f hello-k8s.yml
       - printf '[{"name":"hello-k8s","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
